# vivid

./: Cargo.toml  README.md  build.rs
.github/workflows/: release.yml  rust.yml
src/: adapter.rs  config.rs  error.rs  foreground_callback.rs  foreground_watch.rs  main.rs  w32_ctrlc.rs  w32_msgloop.rs  w32_notifyicon.rs  w32_threadpool.rs
src/adapter/: amd.rs  mod.rs  nvidia.rs
src/nvidia/: mod.rs
