[package]
name = "vivid"
version = "0.1.0"
authors = ["Mathieu Amiot <m.amiot@otak-arts.com>"]
edition = "2018"
description = "Smol utility to change digital vibrance / saturation when a program within a list starts"

[dependencies]
nvapi-hi = { path = "../nvapi-rs/hi", default-features = false }
pretty_env_logger = "0.4"
log = "0.4"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
winapi = { version = "0.3", features = ["winuser", "tlhelp32"] }
sysinfo = "0.15"
lazy_static = "1.4"
parking_lot = "0.11"
ntapi = { version = "0.3.4", features = ["impl-default"] }
structopt = { version = "0.3", features = ["paw"], default-features = false }
paw = "1.0"

[profile.release]
lto = true
codegen-units = 1
debug-assertions = false
