[package]
name = "vivid"
version = "0.2.0"
authors = ["Mathieu Amiot <m.amiot@otak-arts.com>"]
edition = "2018"
description = "Smol utility to change digital vibrance / saturation when a program within a list starts"

[package.metadata.winres]
OriginalFileName = "Vivid.exe"
LegalCopyright = "Copyright © Mathieu Amiot 2020"
FileDescription = "Vivid - Digital Vibrance Automation"
ProductName = "Vivid"
ProductVersion = "0.2.0"

[dependencies]
nvapi-hi = { git = "https://github.com/OtaK/nvapi-rs", branch="feature/dvc", default-features = false }
pretty_env_logger = "0.5"
log = "0.4"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
winapi = { version = "0.3", features = ["winuser", "ntdef", "tlhelp32", "impl-default", "commctrl"] }
sysinfo = "0.18"
lazy_static = "1.4"
parking_lot = "0.11"
structopt = { version = "0.3", features = ["paw"], default-features = false }
paw = "1.0"

[profile.release]
lto = true
codegen-units = 1
debug-assertions = false

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
